# TaxiDemandML

./: .gitignore  README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml
data/cleaned/: ts_data_2022_01.parquet
data/transformed/: ts_data_2022_01.parquet
notebooks/: 00_functions.ipynb  01_data_preprocessing.ipynb  01_load_and_validate_raw_data.ipynb  02_transform_raw_data_to_time_series.ipynb  02_transform_to_time_series.ipynb  03_time_series_data.ipynb  04_create_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_XGBoost_model.ipynb  08_catboost.ipynb  09_catboost_model_with_feature_engineering.ipynb  10_catboost_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  create_features_and_targets.ipynb  data_preprocessing.ipynb  functions.ipynb  transform_to_time_series.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: config.py  functions.py  model.py  paths.py
src/taxiML/: data.py  paths.py
