[tool.poetry]
name = "taxiML"
version = "0.1.0"
description = ""
authors = ["Guy Montag <guy_montag@posteo.net>"]
readme = "README.md"
packages = [{include = "taxiML", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
ipykernel = "^6.21.2"
jupyter = "^1.0.0"
requests = "^2.28.2"
pyarrow = "^11.0.0"
plotly = "^5.13.0"
tqdm = "^4.64.1"
seaborn = "^0.12.2"
xgboost = "^1.7.6"
catboost = "^1.2"
optuna = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
